# binder-aio

./: build-and-run-tests.py  build.py
source/: CMakeLists.txt  binder.cpp  class.cpp  class.hpp  config.cpp  config.hpp  context.cpp  context.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  reporter.cpp  reporter.hpp
source/cmake/modules/: BinderConfig.cmake.in  CMakeLists.txt
